--- a/index.html
+++ b/index.html
@@ -1,27 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
-  integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous"/>
-  <link rel="stylesheet" href="styles.css">
+    integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+    crossorigin="anonymous" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles/page-reset.css">
+  <link rel="stylesheet" href="styles/styles.css">
   <title>Text To Speach</title>
+  <link rel="icon" href="logo.png" />
 </head>
+
 <body>
-
-  <div id="text-box" class="text-box">
-    <h3>Choose A Voice You Would Like To Hear.</h3>
-    <p>Keep in mind, this is using an api, so playback might take a second.</p>
-    <select id="voices"></select>
-    <textarea id="text" placeholder="Enter text to read..."></textarea>
-    <div class="button-box">
-      <button id="read" class="btn">Read Text</button>
-      <button id="clear" class="btn">Clear Text</button>
+  <header>
+    <h2>Text to Speech</h2>
+  </header>
+  <main>
+    <div id="text-box" class="text-box">
+      <h3>Choose A Voice You Would Like To Hear.</h3>
+      <p>Keep in mind, this is using an api, so playback might take a second.</p>
+      <select id="voices"></select>
+      <textarea id="text" placeholder="Enter text to be read..."></textarea>
+      <div class="button-box">
+        <button id="read" class="btn">Read Text</button>
+        <button id="clear" class="btn">Clear Text</button>
+      </div>
     </div>
-  </div>
-
+  </main>
+  <footer>
+    <p>&copy; August 2023</p>
+    <div class="footer-logo">
+      <img src="logo.png" alt="My Logo" />
+    </div>
+  </footer>
   <script src="scripts.js" charset="utf-8"></script>
 </body>
+
 </html>
